Fix for off-centered home page

--- a/react-code/src/Home.css
+++ b/react-code/src/Home.css
@@ -5,7 +5,6 @@
     justify-content: center;
     flex-direction: row;
     height: 80vh;
-    padding-left: 10vw;
 }
 
 .col1 {
@@ -14,7 +13,6 @@
 }
 
 .profile-pic {
-    /*padding-left: 50px;*/
     height: 70vh;
 }
 
